# knock-detector-ml

./: .gitignore  README.md  mic_imu_streaming.ino
collected-data/: example_datastream.csv
data-collection-pipeline/: example_datastream.csv  knock-server.py  live_inference_server.py
firmware/include/: example_credentials.h
firmware/src/: mic_imu_streaming.cpp
model/: CMakeLists.txt  README.txt  imu_model.py  live_inference.cpp
model/model-parameters/: model_metadata.h  model_variables.h
model/tflite-model/: tflite_learn_796726_5_compiled.cpp  tflite_learn_796726_5_compiled.h
